<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:title="@string/settings">
        <menu>
            <item
                app:actionViewClass="com.google.android.material.materialswitch.MaterialSwitch"
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_notification"
                android:title="@string/notifications"/>

            <item
                app:actionLayout="@layout/navigation_drawer_language"
                android:id="@+id/nav_language"
                android:icon="@drawable/ic_language"
                android:title="@string/language"/>

            <item
                app:actionLayout="@layout/navigation_drawer_theme"
                android:id="@+id/nav_theme"
                android:icon="@drawable/ic_theme"
                android:title="@string/theme"/>
        </menu>

    </item>

    <item
        android:title="@string/others">
        <menu>
            <group
                android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_faq"
                    android:icon="@drawable/ic_faq"
                    android:title="@string/faq"/>

                <item
                    android:id="@+id/nav_app_credit"
                    android:icon="@drawable/ic_app_credit"
                    android:title="@string/app_credit"/>

                <item
                    android:id="@+id/nav_contact_us"
                    android:icon="@drawable/ic_email"
                    android:title="@string/contact_us"/>

                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/share"/>

                <item
                    android:id="@+id/nav_rate_us"
                    android:icon="@drawable/ic_star"
                    android:title="@string/rate_us"/>

                <item
                    android:id="@+id/nav_privacy"
                    android:icon="@drawable/ic_privacy"
                    android:title="@string/privacy_policy"/>
            </group>
        </menu>
    </item>

</menu>