<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            app:tint="?android:attr/textColorTertiary"
            android:layout_centerVertical="true"
            android:background="?android:attr/actionBarItemBackground"
            android:id="@+id/iv_back"
            android:padding="20dp"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />

        <TextView
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_toEndOf="@+id/iv_back"
            android:layout_centerVertical="true"
            android:text="@string/request_blood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <ScrollView
        android:layout_below="@id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:maxLength="50"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_hospital"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medical_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_medical"
                    android:maxLength="100"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_phone"
                android:layout_marginTop="10dp"
                app:prefixText="+88"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="phone"
                    android:maxLength="11"
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/blood_group"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/ic_blood_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:labelFor="@id/ac_blood_group"
                    android:inputType="none"
                    android:id="@+id/ac_blood_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_unit"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/unit_bag">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_units"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rg_blood_type"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_weight="1"
                    android:text="@string/blood"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:layout_weight="1"
                    android:text="@string/platelets"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:layout_weight="1"
                    android:text="@string/plasma"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

            <LinearLayout
                android:baselineAligned="false"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    app:startIconDrawable="@drawable/ic_calender"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:id="@+id/et_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginStart="5dp"
                    app:startIconDrawable="@drawable/ic_time"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/time">

                    <com.google.android.material.textfield.TextInputEditText
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:id="@+id/et_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/district"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/ic_flag"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:labelFor="@id/ac_district"
                    android:inputType="none"
                    android:id="@+id/ac_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_location"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLength="200"
                    android:inputType="textMultiLine"
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_details"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_details">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_details"
                    android:maxLength="300"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/upload"
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>