<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:weightSum="2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Account.LoginActivity">

    <RelativeLayout
        android:paddingTop="40dp"
        android:background="?attr/colorSurfaceContainerLow"
        android:gravity="center"
        android:layout_weight="0.8"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:adjustViewBounds="true"
            android:src="@drawable/img_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:padding="30dp"
        android:layout_weight="1.2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_above="@id/btn_login"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/TextAppearance.Material3.DisplayLarge"
                android:textStyle="bold"
                android:text="@string/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TextAppearance.Material3.DisplaySmall"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:text="@string/login_subtitle"
                android:layout_width="260dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
            android:layout_alignParentBottom="true"
            android:id="@+id/btn_login"
            app:icon="@drawable/googleg_standard_color_18"
            app:iconGravity="textStart"
            app:iconPadding="5dp"
            android:text="@string/login_btn_text"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"/>

    </RelativeLayout>

</LinearLayout>